--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
+<link rel="stylesheet" href="../public/app.css">
+
 <body>
-    Login Page
+    test
 </body>
-</html>
