properly linked css page to ejs files

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,13 @@
-<link rel="stylesheet" href="../public/app.css">
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/app.css">
+    <title>Login Page</title>
+</head>
 <body>
-    test
+    Login.
 </body>
+</html>
