--- a/views/simulate.ejs
+++ b/views/simulate.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/app.css">
+    <link rel="stylesheet" href="/css/app.css">
     <title>Simulation page</title>
 </head>
 <body>
