created login form with basic flexbox stylings

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,14 @@
     <title>Login Page</title>
 </head>
 <body>
-    Login.
+    <div id="login"><h2>LOG-IN</h2>
+        <form><div id="loginform">
+            <label for="username">Username: </label>
+            <input type="text" name="username"><br>
+            <label for="password">Password:  </label>
+            <input type="text" name="password"><br>
+            <input type="submit" name="submit" id="loginsubmit">
+        </div></form>
+    </div>
 </body>
 </html>
