created registration form and adjusted css to condense code

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,16 +1,10 @@
-#login {
+.forms {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#loginform {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-#loginsubmit {
+.formsubmit {
     width: 75px;
     align-self: center;
 }
