--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,6 +8,16 @@
     <title>Registration</title>
 </head>
 <body>
-    User registration page.
+    <div class="forms"><h2>REGISTER</h2>
+        <form><div class="forms">
+            <label for="username">Username: </label>
+            <input type="text" name="username"><br>
+            <label for="password">Password:  </label>
+            <input type="text" name="password"><br>
+            <label for="confirmpass">Confirm Password:  </label>
+            <input type="text" name="confirmpass"><br>
+            <input type="submit" name="submit" class="formsubmit">
+        </div></form>
+    </div>
 </body>
 </html>
