--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,13 +8,13 @@
     <title>Login Page</title>
 </head>
 <body>
-    <div id="login"><h2>LOG-IN</h2>
-        <form><div id="loginform">
+    <div class="forms"><h2>LOG-IN</h2>
+        <form><div class="forms">
             <label for="username">Username: </label>
             <input type="text" name="username"><br>
             <label for="password">Password:  </label>
             <input type="text" name="password"><br>
-            <input type="submit" name="submit" id="loginsubmit">
+            <input type="submit" name="submit" class="formsubmit">
         </div></form>
     </div>
 </body>
