--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,3 +14,14 @@
     width: 75px;
     align-self: center;
 }
+
+.inventory {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.inventory p{
+    margin: 3px;
+    border: 3px;
+}
