rendered ingredients to brew page

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -8,6 +8,15 @@
     <title>Brew Page</title>
 </head>
 <body>
-    Brew drinks.
+    <div class='inventory'>
+        <h2>INVENTORY</h2>
+
+        <p>Credits: <%= inv.credits %></p>
+        <p>Gloop: <%= inv.gloop %></p>
+        <p>Veax: <%= inv.veax %></p>
+        <p>Mozuc: <%= inv.mozuc %></p>
+        <p>Zeyoc: <%= inv.zeyoc %></p>
+        <p>Spanu: <%= inv.spanu %></p>
+    </div>
 </body>
 </html>
