--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,11 +10,11 @@
 <body>
     <div class="forms"><h2>LOG-IN</h2>
         <form action="/userlogin" method="post"><div class="forms">
-            <% {%>
+            <% { %>
             Username: <input type="text" name="username" /><br>
             Password: <input type="text" name="password" /><br>
-            <input type="submit" value="accept" class="formsubmit">
-            <%} %>
+            <input type="submit" class="formsubmit">
+            <% } %>
         </div></form>
     </div>
 </body>
