--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 <body>
     <div class="loginbody">
         <div>
-            <button id="register">Register</button>
+            <a href="/register"><button id="register">Register</button></a>
         </div>
         <div class="loginformbody">
             <div class="forms"><h2>LOG-IN</h2>
