displayed day on shop screen

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -18,5 +18,9 @@
         <p>Zeyoc: <%= inv.zeyoc %></p>
         <p>Spanu: <%= inv.spanu %></p>
     </div>
+
+    <div class="day">
+        <p>Day <b><%= inv.day %></b> of <b>10</b></p>
+    </div>
 </body>
 </html>
