changed formatting for inventory

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,8 +34,17 @@
     border: 3px;
 }
 
+.subinv {
+    padding: 5px;
+}
+
 #register {
     position: absolute;
     right: 5%;
     top: 5%;
+}
+
+#shopinv {
+    display: flex;
+    flex-direction: space-between;
 }
