--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -10,13 +10,18 @@
 <body>
     <div class='inventory'>
         <h2>INVENTORY</h2>
-
-        <p>Credits: <%= inv.credits %></p>
-        <p>Gloop: <%= inv.gloop %></p>
-        <p>Veax: <%= inv.veax %></p>
-        <p>Mozuc: <%= inv.mozuc %></p>
-        <p>Zeyoc: <%= inv.zeyoc %></p>
-        <p>Spanu: <%= inv.spanu %></p>
+        <div id="shopinv">
+            <div class="subinv">
+                <p><b>Credits</b>: <%= inv.credits %></p>
+                <p><b>Gloop</b>: <%= inv.gloop %></p>
+                <p><b>Veax</b>: <%= inv.veax %></p>
+            </div>
+            <div class="subinv">
+                <p><b>Mozuc</b>: <%= inv.mozuc %></p>
+                <p><b>Zeyoc</b>: <%= inv.zeyoc %></p>
+                <p><b>Spanu</b>: <%= inv.spanu %></p>
+            </div>
+        </div>
     </div>
 
     <div class="day">
