displays username to shop screen

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,6 +38,12 @@
     padding: 5px;
 }
 
+.username {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+}
+
 #register {
     position: absolute;
     right: 5%;
