--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/app.css">
-    <title>Purchase Ingredients</title>
+    <title>Shop</title>
 </head>
 <body>
     <div class='inventory'>
@@ -22,6 +22,10 @@
                 <p><b>Spanu</b>: <%= inv.spanu %></p>
             </div>
         </div>
+    </div>
+
+    <div class="username">
+        <p><b><%= inv.username %></b>'s Cantina</p>
     </div>
 
     <div class="day">
