--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+body {
+    background-color: black;
+    color: green;
+    font-family: 'Press Start 2P', cursive;
+}
+
 .day {
     position: absolute;
     left: 5%;
