added logo to login screen

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,9 +8,12 @@
     <title>Login Page</title>
 </head>
 <body>
+    <div>
+        <a href="/register"><button id="register">Register</button></a>
+    </div>
     <div class="loginbody">
-        <div>
-            <a href="/register"><button id="register">Register</button></a>
+        <div id="logo">
+            <img src="assets/cantinalogo1.png" alt="cantina logo">
         </div>
         <div class="loginformbody">
             <div class="forms"><h2>LOG-IN</h2>
