--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,7 +22,7 @@ body {
 .loginbody {
     height: 100vh;
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
