--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -31,5 +31,9 @@
     <div class="day">
         <p>Day <b><%= inv.day %></b> of <b>10</b></p>
     </div>
+
+    <div class="weather">
+        <p>Weather: <%= inv.weather %></p>
+    </div>
 </body>
 </html>
