--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,3 +62,21 @@ body {
     display: flex;
     flex-direction: space-between;
 }
+
+.shop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+#storefront {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.ingredient {
+    display: flex;
+    justify-content: space-evenly;
+}
