--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,14 @@ body {
     font-family: 'Press Start 2P', cursive;
 }
 
+input{
+    background-color: rgb(32, 52, 52);
+    color: green;
+    font-family: 'Press Start 2P', cursive;
+    padding: 12px;
+    border: none;
+}
+
 .day {
     position: absolute;
     left: 5%;
@@ -27,7 +35,7 @@ body {
 }
 
 .formsubmit {
-    width: 65px;
+    width: 100px;
     align-self: center;
 }
 
