--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,8 +12,8 @@
         <form action="/newuser" method="post"><div class="forms">
             <% { %>
             Username: <input type="text" name="username"><br>
-            Password: <input type="text" name="password"><br>
-            Confirm Password: <input type="text" name="confirmpass"><br>
+            Password: <input type="password" name="password"><br>
+            Confirm Password: <input type="password" name="confirmpass"><br>
             <input type="submit" name="submit" class="formsubmit">
             <% } %>
         </div></form>
