--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,64 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
 body {
-    background-color: black;
-    color: green;
-    font-family: 'Press Start 2P', cursive;
+  background-color: black;
+  color: green;
+  font-family: "Press Start 2P", cursive;
 }
 
 .day {
-    position: absolute;
-    left: 5%;
-    bottom: 5%;
+  position: absolute;
+  left: 5%;
+  bottom: 5%;
 }
 
 .forms {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-items: center;
 }
 
 .loginbody {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .formsubmit {
-    width: 65px;
-    align-self: center;
+  width: 65px;
+  align-self: center;
 }
 
 .inventory {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.inventory p{
-    margin: 3px;
-    border: 3px;
+.inventory p {
+  margin: 3px;
+  border: 3px;
 }
 
 .subinv {
-    padding: 5px;
+  padding: 5px;
 }
 
 .username {
-    position: absolute;
-    top: 5%;
-    left: 5%;
+  position: absolute;
+  top: 5%;
+  left: 5%;
 }
 
 #register {
-    position: absolute;
-    right: 5%;
-    top: 5%;
+  position: absolute;
+  right: 5%;
+  top: 5%;
 }
 
 #shopinv {
-    display: flex;
-    flex-direction: space-between;
+  display: flex;
+  flex-direction: space-between;
+}
+
+#help-button {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  right: 5%;
+  bottom: 5%;
 }
