FSC-61 FSC-86 completed help inputs

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -27,7 +27,7 @@
         </p>
     </div>
     <div id="help-button">
-        <input type="submit" value="Help">Help</button>
+        <input type="submit" value="Help">
     </div>
 </body>
 
