--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -45,7 +45,7 @@
             </b> of <b>10</b></p>
     </div>
     <div id="help-button">
-        <input type="submit" value="Help">Help</button>
+        <input type="submit" value="Help">
     </div>
 </body>
 
