--- a/public/css/app.css
+++ b/public/css/app.css
@@ -66,7 +66,9 @@ body {
 #help-button {
   display: flex;
   justify-content: center;
-  position: absolute;
-  right: 5%;
-  bottom: 5%;
+  position: fixed;
+  left: 50%;
+  bottom: 30px;
+  transform: translate(-50%, -50%);
+  margin: 0px auto;
 }
