fsc-46 create display for price of ingredients on shop page

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -40,7 +40,7 @@
                 <div class="ingredient" id="veax-spice">
                     <form action="/buyveax" method="post"><div>
                         <% { %>
-                            Buy V'eax spice: <input type="submit" class="buy-button" id="buy-veax" value="$">
+                            Buy V'eax spice: <input type="submit" class="buy-button" id="buy-veax" value="$100">
                         <% } %>
                     </div></form>
                 </div>
@@ -48,7 +48,7 @@
                 <div class="ingredient" id="mozuc-concentrate">
                     <form action="/buymozuc" method="post"><div>
                         <% { %>
-                            Buy Mozuc Concentrate: <input type="submit" class="buy-button" id="buy-mozuc" value="$">
+                            Buy Mozuc Concentrate: <input type="submit" class="buy-button" id="buy-mozuc" value="$100">
                         <% } %>
                     </div></form>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="ingredient" id="zeyoc-peel">
                     <form action="/buyzeyoc" method="post"><div>
                         <% { %>
-                            Buy Ze'yoc Peel: <input type="submit" class="buy-button" id="buy-zeyoc" value="$">
+                            Buy Ze'yoc Peel: <input type="submit" class="buy-button" id="buy-zeyoc" value="$100">
                         <% } %>
                     </div></form>
                 </div>
@@ -66,7 +66,7 @@
                 <div class="ingredient" id="gloop">
                     <form action="/buygloop" method="post"><div>
                         <% { %>
-                            Buy Gloop: <input type="submit" class="buy-button" id="buy-gloop" value="$$">
+                            Buy Gloop: <input type="submit" class="buy-button" id="buy-gloop" value="$200">
                         <% } %>
                     </div></form>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="ingredient" id="spanu-cream">
                     <form action="/buyspanu" method="post"><div>
                         <% { %>
-                            Buy Spanu: <input type="submit" class="buy-button" id="buy-spanu" value="$$$">
+                            Buy Spanu: <input type="submit" class="buy-button" id="buy-spanu" value="$300">
                         <% } %>
                     </div></form>
                 </div>
