--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -93,12 +93,17 @@
                 <%= inv.day %>
             </b> of <b>10</b></p>
     </div>
+
     <div id="help-button">
         <input type="submit" value="Help">
     </div>
 
     <div class="weather">
         <p>Weather: <%= inv.weather %></p>
+    </div>
+
+    <div>
+        <a href="/brew"><input type="submit" id="readytobrew" value="Ready to Brew"></a>
     </div>
 </body>
 
