added popularity to inventories table and displayed on shop page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,6 +58,12 @@ input {
   border: 3px;
 }
 
+.popularity {
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+}
+
 .subinv {
   padding: 5px;
 }
