--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -102,6 +102,10 @@
         <p>Weather: <%= inv.weather %></p>
     </div>
 
+    <div class="popularity">
+        <p>Popularity: <%= inv.popularity %>%</p>
+    </div>
+
     <div>
         <a href="/brew"><input type="submit" id="readytobrew" value="Ready to Brew"></a>
     </div>
