added media query for logo resizing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -126,3 +126,13 @@ input {
   width: 25%;
   height: 10%
 }
+
+@media screen and (max-width: 700px) {
+  #logoimg {
+    width: 400px;
+  }
+
+  #register {
+    padding: 5px;
+  }
+}
