--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     </div>
     <div class="loginbody">
         <div id="logo">
-            <img src="assets/cantinalogo1.png" alt="cantina logo">
+            <img src="assets/cantinalogo1.png" alt="cantina logo" id="logoimg">
         </div>
         <div class="loginformbody">
             <div class="forms"><h2>LOG-IN</h2>
