FSC-35 current day on brew page

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -26,6 +26,11 @@
         <p>Spanu: <%= inv.spanu %>
         </p>
     </div>
+    <div class="day">
+        <p>Day <b>
+                <%= inv.day %>
+            </b> of <b>10</b></p>
+    </div>
     <div id="help-button">
         <input type="submit" value="Help">
     </div>
