--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -26,6 +26,13 @@
         <p>Spanu: <%= inv.spanu %>
         </p>
     </div>
+
+    <div class="username">
+        <p><b>
+                <%= inv.username %>
+            </b>'s Cantina</p>
+    </div>
+
     <div id="help-button">
         <input type="submit" value="Help">
     </div>
