--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -31,6 +31,11 @@
                 <%= inv.day %>
             </b> of <b>10</b></p>
     </div>
+
+    <div class="popularity">
+        <p>Popularity: <%= inv.popularity %>%</p>
+    </div>
+
     <div id="help-button">
         <input type="submit" value="Help">
     </div>
