Updated tutorial page and linked buttons

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -91,7 +91,7 @@ input {
   flex-direction: space-between;
 }
 
-#help-button {
+.help {
   display: flex;
   justify-content: center;
   position: fixed;
@@ -125,6 +125,12 @@ input {
   bottom: 25%;
   width: 25%;
   height: 10%
+}
+
+#return {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 @media screen and (max-width: 700px) {
