--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,6 +25,9 @@
                     <% } %>
                 </div></form>
             </div>
+            <div class="help">
+                <a href="/tutorial"><input type="submit" value="Help"></a>
+            </div>
         </div>
     </div>
 </body>
