--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -94,8 +94,8 @@
             </b> of <b>10</b></p>
     </div>
 
-    <div id="help-button">
-        <input type="submit" value="Help">
+    <div class="help">
+        <a href="/tutorial"><input type="submit" value="Help"></a>
     </div>
 
     <div class="weather">
