--- a/views/tutorial.ejs
+++ b/views/tutorial.ejs
@@ -8,6 +8,20 @@
     <title>How To Play</title>
 </head>
 <body>
-    How To Play
+    <p>In Supernova Cantina, you are tasked with managing an up-and-coming bar for the various lifeforms of the quadrant. You have ten days to amass your credit fortune and become the space capitalist of your dreams!</p>
+
+    <p>Intergalactic drink making is relatively simple. At the beginning of each day, you will have to decide which ingredients you would like to purchase. Every drink starts with a base of alien Gloop, so make sure you stock up on those. There are three ingredients (V'eax Spice, Mozuc Concentrate, and Ze'yoc Peel) that, when combined together with Gloop, form one of three drinks to serve. Different species will be fond of different drinks, so keep an eye on the weather to get an idea of your likely customer base for the day. There is also a local delicacy known as Spanu that, when added to your drinks, could give you the popularity boost needed to bring in more customers.</p>
+
+    <p>Once you purchase your ingredients, you will then have to decide how many drinks to make using your resources, and also set the price for each drink. Be careful! If you make your drink too pricey, customers will leave without buying anything. Your inventory will carry over day to day, but any drinks made will go bad, so make sure to strike a good balance. Once all choices have been made, it's time to simulate the business day and see how many credits you raked in!</p>
+
+    <p>Get one of the top scores by the end of ten days to earn your spot on the illustrious leaderboard. </p>
+
+    <p>The VARKRO are fond of HOT weather and like to order VEMO.</p>
+    <p>The UKREL are fond of AVERAGE weather and like to order MOZE.</p>
+    <p>The GHAV'IK are fond of COLD weather and like to order VEZE.</p>
+
+    <div id="return">
+        <a href="/shop"><input type="submit" value="Return"></a>
+    </div>
 </body>
 </html>
