FSC-85 added proceed button on brew page

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -31,6 +31,11 @@
                 <%= inv.day %>
             </b> of <b>10</b></p>
     </div>
+
+    <div>
+        <a href="/simulate"><input type="submit" id="readytobrew" value="Open Bar!"></a>
+    </div>
+
     <div id="help-button">
         <input type="submit" value="Help">
     </div>
