fixed help from id to class on brew

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -48,7 +48,7 @@
         <a href="/simulate"><input type="submit" id="readytobrew" value="Open Bar!"></a>
     </div>
 
-    <div id="help-button">
+    <div class="help">
         <input type="submit" value="Help">
     </div>
 </body>
