fixed typos and spacing on shop

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -41,11 +41,11 @@
                 <div class="ingredient" id="veax-spice">
                     <form action="/buyveax" method="post"><div>
                         <% { %>
-                            Buy V'eax spice: <input type="submit" class="buy-button" id="buy-veax" value="15 for $100">
+                            Buy V'eax Spice: <input type="submit" class="buy-button" id="buy-veax" value="15 for $100">
                         <% } %>
                     </div></form>
                 </div>
-
+                <br>
                 <div class="ingredient" id="mozuc-concentrate">
                     <form action="/buymozuc" method="post"><div>
                         <% { %>
@@ -53,7 +53,7 @@
                         <% } %>
                     </div></form>
                 </div>
-
+                <br>
                 <div class="ingredient" id="zeyoc-peel">
                     <form action="/buyzeyoc" method="post"><div>
                         <% { %>
@@ -71,7 +71,7 @@
                         <% } %>
                     </div></form>
                 </div>
-
+                <br>
                 <div class="ingredient" id="spanu-cream">
                     <form action="/buyspanu" method="post"><div>
                         <% { %>
@@ -84,9 +84,7 @@
     </div>
 
     <div class="username">
-        <p><b>
-                <%= inv.username %>
-            </b>'s Cantina</p>
+        <p><b><%= inv.username %></b>'s Cantina</p>
     </div>
 
     <div class="day">
