FSC-117 added help and proceed buttons to simulate page

--- a/views/simulate.ejs
+++ b/views/simulate.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,15 @@
     <link rel="stylesheet" href="/css/app.css">
     <title>Simulation page</title>
 </head>
+
 <body>
-    Simulation occurs here.
+    <div>
+        <a href="/simulate"><input type="submit" id="readytobrew" value="Open Bar!"></a>
+    </div>
+
+    <div class="help">
+        <input type="submit" value="Help">
+    </div>
 </body>
+
 </html>
