--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -42,7 +42,21 @@
 
     <div id="everythingdrinks">
         <div id="bar">
-            Bar goes here
+            <h2>BAR</h2>
+            <div id="shelves">
+                <div class="shelf" id="bittershelf">
+                    <h3>Bitter Shelf</h3>
+                    <p><b>Vemo</b>: <%= bar.vemo %></p>
+                    <p><b>Moze</b>: <%= bar.moze %></p>
+                    <p><b>Veze</b>: <%= bar.veze %></p>
+                </div>
+                <div class="shelf" id="sweetshelf">
+                    <h3>Sweet Shelf</h3>
+                    <p><b>Vemo Spanu</b>: <%= bar.vemospanu %></p>
+                    <p><b>Moze Spanu</b>: <%= bar.mozespanu %></p>
+                    <p><b>Veze Spanu</b>: <%= bar.vezespanu %></p>
+                </div>
+            </div>
         </div>
 
         <div id="brewery">
