fsc-123 add price columns for each drink in drinks table

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -47,14 +47,20 @@
                 <div class="shelf" id="bittershelf">
                     <h3>Bitter Shelf</h3>
                     <p><b>Vemo</b>: <%= bar.vemo %></p>
+                    <p><b>Cost/drink</b>: <%= bar.vemoprice %></p>
                     <p><b>Moze</b>: <%= bar.moze %></p>
+                    <p><b>Cost/drink</b>: <%= bar.mozeprice %></p>
                     <p><b>Veze</b>: <%= bar.veze %></p>
+                    <p><b>Cost/drink</b>: <%= bar.vezeprice %></p>
                 </div>
                 <div class="shelf" id="sweetshelf">
                     <h3>Sweet Shelf</h3>
                     <p><b>Vemo Spanu</b>: <%= bar.vemospanu %></p>
+                    <p><b>Cost/drink</b>: <%= bar.vemospanuprice %></p>
                     <p><b>Moze Spanu</b>: <%= bar.mozespanu %></p>
+                    <p><b>Cost/drink</b>: <%= bar.mozespanuprice %></p>
                     <p><b>Veze Spanu</b>: <%= bar.vezespanu %></p>
+                    <p><b>Cost/drink</b>: <%= bar.vezespanuprice %></p>
                 </div>
             </div>
         </div>
