--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -135,6 +135,10 @@
         <a href="/simulate"><input type="submit" id="readytobrew" value="Open Bar!"></a>
     </div>
 
+    <div class="logout">
+        <form action="/logout" method="get"><input type="submit" value="Log Out"></form>
+    </div>
+
     <div class="help">
         <input type="submit" value="Help">
     </div>
