--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -93,6 +93,10 @@
             </b> of <b>10</b></p>
     </div>
 
+    <div class="logout">
+        <form action="/logout" method="get"><input type="submit" value="Log Out"></form>
+    </div>
+
     <div class="help">
         <a href="/tutorial"><input type="submit" value="Help"></a>
     </div>
