--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -142,6 +142,10 @@
     <div class="help">
         <input type="submit" value="Help">
     </div>
+
+    <div class="reset">
+        <form action="/reset" method="post"><input type="submit" value="Reset Game"></form>
+    </div>
 </body>
 
 </html>
