--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
                     <% } %>
                 </div></form>
             </div>
-            <div class="help">
+            <div class="help" id="loginhelp">
                 <a href="/tutorial"><input type="submit" value="Help"></a>
             </div>
         </div>
