--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -97,6 +97,10 @@
         <form action="/logout" method="get"><input type="submit" value="Log Out"></form>
     </div>
 
+    <div class="reset">
+        <form action="/reset" method="post"><input type="submit" value="Reset Game"></form>
+    </div>
+
     <div class="help">
         <a href="/tutorial"><input type="submit" value="Help"></a>
     </div>
