--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,7 @@
             Username: <input type="text" name="username"><br>
             Password: <input type="password" name="password"><br>
             Confirm Password: <input type="password" name="confirmpass"><br>
-            <input type="submit" name="submit" class="formsubmit">
+            <input type="submit" name="submit" id="registersubmit">
             <% } %>
         </div></form>
     </div>
