fsc-126 add default values to set price input on brew page

--- a/views/brew.ejs
+++ b/views/brew.ejs
@@ -124,12 +124,12 @@
             <h2>OFFICE</h2>
             <form action="/setprice" method="post"><div class="forms">
                 <% { %>
-                Set Vemo Price: <input type="number" name="vemo" /><br>
-                Set Moze Price: <input type="number" name="moze" /><br>
-                Set Veze Price: <input type="number" name="veze" /><br>
-                Set Vemo Spanu Price: <input type="number" name="vemospanu" /><br>
-                Set Moze Spanu Price: <input type="number" name="mozespanu" /><br>
-                Set Veze Spanu Price: <input type="number" name="vezespanu" /><br>
+                Set Vemo Price: <input type="number" name="vemo" value="40"/><br>
+                Set Moze Price: <input type="number" name="moze" value="40"/><br>
+                Set Veze Price: <input type="number" name="veze" value="40"/><br>
+                Set Vemo Spanu Price: <input type="number" name="vemospanu" value="55"/><br>
+                Set Moze Spanu Price: <input type="number" name="mozespanu" value="55"/><br>
+                Set Veze Spanu Price: <input type="number" name="vezespanu" value="55" /><br>
                 <input type="submit" value="Set Prices">
                 <% } %>
             </div></form>
